<resources>
    <string name="app_name">Kanji4U</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="title_fragment_label">Kanji4U</string>
    <string name="lesson_navigation_fragment_label">Kanji4U - Study Area</string>
    <string name="lessons_fragment_label">Kanji4u - Lessons</string>
    <string name="kanji_display_fragment_label">Kanji</string>
    <string name="next">Start</string>
    <string name="previous">Back</string>

    <string name="hello_first_fragment">Kanji4U</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="kanji_dict_file">kanjidic</string>
    <string name="frag_1_bg_content_descript">Background Image</string>

    <string name="darkmode">Set Dark Mode</string>
    <string name="lightmode">Set Light Mode</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="left_nav_text">Back</string>
    <string name="right_nav_text">Forward</string>
    <string name="memorize_checkbox_text">Memorized?</string>
</resources>