<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/TitleFragment">

    <fragment
        android:id="@+id/TitleFragment"
        android:name="com.kanji4u.app.TitleFragment"
        android:label="@string/title_fragment_label"
        tools:layout="@layout/fragment_title">

        <action
            android:id="@+id/action_TitleFragment_to_LessonNavigationFragment"
            app:destination="@id/LessonNavigationFragment" />
    </fragment>
    <fragment
        android:id="@+id/LessonNavigationFragment"
        android:name="com.kanji4u.app.LessonNavigationFragment"
        android:label="@string/lesson_navigation_fragment_label"
        tools:layout="@layout/fragment_lesson_navigation">

        <action
            android:id="@+id/action_LessonNavigationFragment_to_TitleFragment"
            app:destination="@id/TitleFragment" />
        <action
            android:id="@+id/action_LessonNavigationFragment_to_lessonsFragment"
            app:destination="@id/lessonsFragment" />
    </fragment>
    <fragment
        android:id="@+id/lessonsFragment"
        android:name="com.kanji4u.app.LessonsFragment"
        android:label="@string/lessons_fragment_label"
        tools:layout="@layout/fragment_lessons" >
        <action
            android:id="@+id/action_lessonsFragment_to_LessonNavigationFragment"
            app:destination="@id/LessonNavigationFragment" />
        <action
            android:id="@+id/action_lessonsFragment_to_kanjiDisplayFragment"
            app:destination="@id/kanjiDisplayFragment" />
    </fragment>
    <fragment
        android:id="@+id/kanjiDisplayFragment"
        android:name="com.kanji4u.app.KanjiDisplayFragment"
        android:label="Kanji Study"
        tools:layout="@layout/fragment_kanji_display" >
        <action
            android:id="@+id/action_kanjiDisplayFragment_to_lessonsFragment"
            app:destination="@id/lessonsFragment" />
    </fragment>
</navigation>