<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="onCheckboxClicked"
    android:orientation="horizontal"
    tools:context=".KanjiDisplayFragment">

    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/left_nav_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/kanjiNumOrder"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/kanjiDisplay"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/onReading"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/kunReading"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/englishMeaning"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/frequencyRank"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="TextView" />

        <CheckBox
            android:id="@+id/memorizedCheckbox"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/memorize_checkbox_text" />
    </LinearLayout>

    <Button
        android:id="@+id/forwardButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/right_nav_text" />

</LinearLayout>